# exequtor

./: EoSense_sync.yaml  README.md  generate_opt_measurements_NMR_opt.yml  optimized_params.yaml  optmeasurement.yml  pyproject.toml
exequtor/: __init__.py  analyse_results.py  generate_instructions.py  load_analysis_scripts.py  main.py
